# agentric-dev-bot

./: .gitignore  Cargo.toml  README.md
config/: config.toml
src/: main.rs
