[package]
name = "agentric-dev-bot"
version = "0.1.0"
authors = ["Tibo Cintio <tibocin@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.8.19"
env_logger = "0.11.5"
