[package]
name = "agentric-dev-bot"
version = "0.1.0"
authors = ["Tibo Cintio <tibocin@pm.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-macros = "2.2.0"
toml = "0.8.19"
env_logger = "0.11.5"
tempfile = "3.13.0"
lazy_static = "1.4"

[dev-dependencies]
lazy_static = "1.4"
